--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,18 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# TypeScript
+.tsbuildinfo
+
+# Jest
+/jest-cache/
+/jest-test-results.json
+/test-results.xml
+
+# ESLint / Prettier
+.eslintcache
+.prettiercache
+
+# NestJS
+.nest-cli.json
