--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
       "src/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts"]
+  "include": ["src/**/*.ts", "src/shared/utils/global-setup.ts"]
 }
